Rework [stage]